# python-poetry-example

./: .gitignore  README.md  pyproject.toml
rest_api/: app.py
rest_api/models/: todo.py
rest_api/routes/: index.py  todo.py
rest_api/utils/: generate_random_id.py
tests/: rest_api.py  test_index.py  test_todos.py
